Adiciona novo tema

--- a/.env.sample
+++ b/.env.sample
@@ -26,3 +26,13 @@ APP_MODE=development
 # APP_RUNTIME=Runtime\\FrankenPhpSymfony\\Runtime
 NIXPACKS_PHP_ROOT_DIR=/app/public
 NIXPACKS_PHP_FALLBACK_PATH=/index.php
+
+SITE_NAME=Mapa das Periferias
+SITE_DESCRIPTION=As comunidades no Brasil são territórios de potência. Esta plataforma nasceu para reunir e sistematizar dados e informações sobre as periferias do Brasil, com a missão de fortalecer as políticas públicas voltadas para territórios periféricos.
+LOGO_TITLE=
+LOGO_SUBTITLE=
+LOGO_IMAGE=
+AUTH_EMAIL_IMAGE=https://iniciativas-mapadasperiferias.cidades.gov.br/files/opportunity/4/file/30/logo-ppv2024-f33ccbf81a4f55ec30ccb6c03264c7a7-23.jpg
+AUTH_LOGIN_ON_REGISTER=true
+STATUS_CREATE_AGENT=1
+AUTH_LOGIN_BY_CPF=false
