--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -198,14 +198,26 @@ services:
   #   ports:
   #     - 6379
 
-  # phpunit:
-  #   image: ghcr.io/redemapas/mapas-php
-  #   build: 
-  #     context: .
-  #   restart: no
-  #   volumes:
-  #     - .:/app
-  #   working_dir: /app
+  web-dev:
+    image: ghcr.io/redemapas/mapas-php
+    build: 
+      context: .
+    restart: no
+    depends_on:
+      - database
+    environment:
+      <<: *environment
+      CACHE_ASSETS_URL: 'false'
+    ports:
+      - 4242:80
+    volumes:
+      - ./:/app
+      - var-files:/app/var/
+      - assets-files:/app/public/assets
+      - user-public-files:/app/public/files/
+      - sessions-files:/app/var/sessions/
+      - doctrine-files:/app/var/DoctrineProxies/
+    command: php -S 0.0.0.0:80 -q -t /app/public /app/router.php
 
   # pgadmin:
   #   image: dpage/pgadmin4
