--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,16 @@ x-defaults: &defaults
     NIXPACKS_PHP_ROOT_DIR: ${NIXPACKS_PHP_ROOT_DIR}
     NIXPACKS_PHP_FALLBACK_PATH: ${NIXPACKS_PHP_FALLBACK_PATH}
     ACTIVE_THEME: 'MapasCulturais\Themes\BaseV2'
+    
+    SITE_NAME: ${SITE_NAME}
+    SITE_DESCRIPTION: ${SITE_DESCRIPTION}
+    LOGO_TITLE: ${LOGO_TITLE}
+    LOGO_SUBTITLE: ${LOGO_SUBTITLE}
+    LOGO_IMAGE: ${LOGO_IMAGE}
+    AUTH_EMAIL_IMAGE: ${AUTH_EMAIL_IMAGE}
+    AUTH_LOGIN_ON_REGISTER: ${AUTH_LOGIN_ON_REGISTER}
+    STATUS_CREATE_AGENT: ${STATUS_CREATE_AGENT}
+    AUTH_LOGIN_BY_CPF: ${AUTH_LOGIN_BY_CPF}
 
 services:
 
@@ -46,7 +56,7 @@ services:
       - sessions-files:/app/var/sessions/
       - doctrine-files:/app/var/DoctrineProxies/
     ports:
-      - 4242:80
+      - 80
 
   database:
     image: kartoza/postgis:14
@@ -198,26 +208,27 @@ services:
   #   ports:
   #     - 6379
 
-  web-dev:
-    image: ghcr.io/redemapas/mapas-php
-    build: 
-      context: .
-    restart: no
-    depends_on:
-      - database
-    environment:
-      <<: *environment
-      CACHE_ASSETS_URL: 'false'
-    ports:
-      - 4242:80
-    volumes:
-      - ./:/app
-      - var-files:/app/var/
-      - assets-files:/app/public/assets
-      - user-public-files:/app/public/files/
-      - sessions-files:/app/var/sessions/
-      - doctrine-files:/app/var/DoctrineProxies/
-    command: php -S 0.0.0.0:80 -q -t /app/public /app/router.php
+#   command: php -S 0.0.0.0:80 -q -t /app/public /app/router.php
+  # web-dev:
+  #   image: ghcr.io/redemapas/mapas-php
+  #   build: 
+  #     context: .
+  #   restart: no
+  #   depends_on:
+  #     - database
+  #   environment:
+  #     <<: *environment
+  #     CACHE_ASSETS_URL: 'false'
+  #   ports:
+  #     - 4242:80
+  #   volumes:
+  #     - ./:/app
+  #     - var-files:/app/var/
+  #     - assets-files:/app/public/assets
+  #     - user-public-files:/app/public/files/
+  #     - sessions-files:/app/var/sessions/
+  #     - doctrine-files:/app/var/DoctrineProxies/
+  #   command: sleep 10000
 
   # pgadmin:
   #   image: dpage/pgadmin4
