Ajeitei bugs da localização, arrumei erros de indetação

--- a/public/docs/v1/components/schemas/project.yaml
+++ b/public/docs/v1/components/schemas/project.yaml
@@ -200,7 +200,7 @@ properties:
   pinterest:
     type: string
     nullable: true
-    description: Pinterest associado ao 
+    description: Pinterest associado ao Projeto
   tiktok:
     type: string
     nullable: true
