--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,11 @@
         "symfony/property-access": "^7.0",
         "symfony/validator": "^7.0",
         "phpoffice/phpspreadsheet": "^2.0",
-        "curl/curl": "1.2.*"
+        "curl/curl": "1.2.*",
+        "php-di/php-di": "^7.0",
+        "symfony/dotenv": "^7.1",
+        "doctrine/migrations": "^3.8",
+        "symfony/yaml": "^7.1"
     },
     "autoload": {
         "psr-4": {
