--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,8 @@ services:
     restart: '${DOCKER_RESTART_POLICY:-always}'
     depends_on:
       - database
+      - redis
+      - mailhog
     environment:
       <<: *environment
     volumes:
@@ -146,7 +148,7 @@ services:
       - sessions-files:/app/var/sessions/
       - doctrine-files:/app/var/DoctrineProxies/
 
-  mc-db-updates.sh:
+  mc-db-updates:
     <<: *defaults
     image: ghcr.io/redemapas/mapas
     command: ./scripts/mc-db-updates.sh
