--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mapasculturais/mapasculturais",
-    "version": "7.3.45",
+    "version": "7.4.15",
     "description": " Mapas Culturais é uma plataforma colaborativa que reúne informações sobre agentes, espaços, eventos e projetos culturais, fornecendo ao poder público uma radiografia da área de cultura e ao cidadão um mapa de espaços e eventos culturais da região",
     "keywords": ["php", "docker", "gis", "postgres"],
     "type": "project",
@@ -11,19 +11,19 @@
         "ext-pdo_pgsql": "*",
         "ext-zip": "*",
         "ext-gd": "*",
-        "acelaya/doctrine-enum-type": "^2.3",                                                                                               
+        "acelaya/doctrine-enum-type": "^2.3",
         "akrabat/ip-address-middleware": "^2.1",
         "doctrine/annotations": "^2.0",
         "doctrine/dbal": "^3.6",
-        "doctrine/orm": "2.16.*",                                                                                                           
-        "firebase/php-jwt": "^6.4", 
+        "doctrine/orm": "2.16.*",
+        "firebase/php-jwt": "^6.4",
         "michelf/php-markdown": "1.*",
         "monolog/monolog": "^3.4",
-        "mustache/mustache": "^2.11",                            
+        "mustache/mustache": "^2.11",
         "opauth/openid": "*",
         "opauth/logincidadao" : "*",
         "opauth/authentik" : "*",
-        "pomo/pomo": "^1.5",                                                                                                                
+        "pomo/pomo": "^1.5",
         "psy/psysh": "^0.11.12",
         "respect/validation": "^2.2",
         "sinergi/browser-detector": "^6.1",
@@ -38,33 +38,15 @@
         "symfony/mime": "^6.3",
         "symfony/sendgrid-mailer": "^6.3",
         "league/csv": "^9.6.2",
-        "symfony/http-foundation": "^7.0",
-        "symfony/routing": "^7.0",
-        "symfony/console": "^6.4.6",
-        "symfony/serializer": "^7.0",
-        "symfony/property-access": "^7.0",
-        "symfony/validator": "^7.0",
-        "phpoffice/phpspreadsheet": "^2.0",
-        "curl/curl": "1.2.*",
-        "php-di/php-di": "^7.0",
-        "symfony/dotenv": "^7.1",
-        "doctrine/migrations": "^3.8",
-        "symfony/yaml": "^7.1"
+        "curl/curl": "1.2.*"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/src",
-            "App\\Tests\\": "app/tests",
             "MapasCulturaisTests\\": "tests/unit/classes",
             "MapasCulturais\\": "src/core",
             "MapasCulturais\\Modules\\": "src/modules",
             "MapasCulturais\\Themes\\": "src/themes"
         }
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
     },
     "repositories": [
         {
@@ -83,10 +65,7 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
         "vimeo/psalm": "^5.17",
-        "zircote/swagger-php": "^4.8",
         "friendsofphp/php-cs-fixer": "^3.51",
-        "phpunit/phpunit": "^10",
-        "symfony/http-client": "^7",
-        "doctrine/data-fixtures": "^1.7"
+        "phpunit/phpunit": "^10"
     }
 }
