Move testes do cypress para raiz do repositório

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,9 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-          cache-dependency-path: ./pnpm-lock.yaml
+          # cache-dependency-path: ./pnpm-lock.yaml
+      - run: pnpm i
+      - run: pnpm run build
       - name: Configuração de valores padrões
         run: |
             cp .env.sample .env
