--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "watch": "pnpm run --parallel --recursive watch",
         "postinstall": "sass src/themes/BaseV1/assets/css/sass/main.scss:src/themes/BaseV1/assets/css/main.css"
     },
+    "packageManager": "pnpm@^9",
     "devDependencies": {
         "fast-glob": "^3.3.2",
         "laravel-mix": "^6.0.49",
@@ -15,5 +16,11 @@
         "sass": "^1.77.2",
         "sass-loader": "^12.6.0",
         "webpack": "^5.91.0"
+    },
+    "dependencies": {
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.25.7",
+        "@babel/preset-env": "^7.25.7"
     }
 }
